# semantic_fragility_jscc

./: .gitignore  AGENTS.md  EXPERIMENTS.md  PROGRESS.md  PROJECT.md  README.md  SERVER_MIGRATION.md  pyproject.toml  requirements.txt
configs/: EXP-S0-001_gpu_dryrun.json  EXP-S1-001_classifier.json  EXP-S1-002_deepjscc.json  EXP-S1-003_deepjscc.json  EXP-S1-004_classifier.json  EXP-S1-005_deepjscc.json  EXP-S2-001_ranking.json  EXP-S2-002_ranking.json
scripts/: gpu_dry_run.py  make_report_assets.py  make_roadmap_figure.py  run_ranking.py  smoke_test.py  train_classifier.py  train_jscc.py
src/fragile_jscc/: __init__.py  channels.py  config.py  data.py  evaluation.py  experiment.py  groups.py  models.py  quality.py  scoring.py  semantic.py  utils.py
tests/: test_core.py  test_experiment.py
